bug fix - overlayed feedback button also disabled leftside buttons

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -16,9 +16,8 @@
       }
       #feedback {
         position: absolute;
-        left: 0;
+        right: 7px;
         top: 2em;
-        width: 99vw;
         text-align: right;
       }
       #feedback button {
