add extern conf button - use kokutele ;)

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -17,18 +17,35 @@
       #feedback {
         position: absolute;
         right: 7px;
-        top: 2em;
+        top: 5em;
         text-align: right;
       }
       #feedback button {
         font-weight: bold;
         color: #fff;
-        background-color: cornflowerblue;
+        background-color: #136EAB;
         cursor: pointer;
         border-radius: 3px;
         box-shadow: 2px 2px 2px gray;
       }
       #feedback button:hover {
+        opacity: 0.75;
+      }
+      #kokutele {
+        position: absolute;
+        right: 7px;
+        top: 2em;
+        text-align: right;
+      }
+      #kokutele button {
+        font-weight: bold;
+        color: #fff;
+        background-color: #009453;
+        cursor: pointer;
+        border-radius: 3px;
+        box-shadow: 2px 2px 2px gray;
+      }
+      #kokutele button:hover {
         opacity: 0.75;
       }
     </style>
@@ -40,6 +57,11 @@
     <div id="feedback">
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSe1LHA9BGJmn0_jYTlWgekvUYqoAHrrKV7_Vkfm71Jm40jQZw/viewform" target="_blank">
         <button>FEED<br/>BACK</button>
+      </a>
+    </div>
+    <div id="kokutele">
+      <a href="https://conf.kokutele.com/" target="_blank">
+        <button>Conf w/<br/>outside WS</button>
       </a>
     </div>
   </body>
