fix issue for not being able to chat w/ others

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -52,7 +52,7 @@
   </head>
   <body>
     <div id="nework">
-      <iframe src="https://nework.app/workspaces" width="100%" height="100%" frameborder="0"></iframe>
+      <iframe src="https://nework.app/workspaces" allow="camera 'src'; microphone 'src'" width="100%" height="100%" frameborder="0"></iframe>
     </div>
     <div id="feedback">
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSe1LHA9BGJmn0_jYTlWgekvUYqoAHrrKV7_Vkfm71Jm40jQZw/viewform" target="_blank">
